# Banana

./: .clang-format  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Banana.code-workspace  Banana.k3h4.native.code-workspace  Banana.sln  CInteropSharp.sln  CMakeLists.txt  CMakePresets.json  CONTEXT-MAP.md  Directory.Build.props  PHASE1-ACCEPTANCE.md  README.md  analysis-gameplay-expansion.md  banana-api.postman_collection.json  bash.exe.stackdump  biome.json  build_output.txt  docker-compose.yml  lighthouserc.json  middleware.ts  package.json  railway.json  turbo.json  vercel.json
.legacy/codebases/20260516-011230/root-sweep/: .dockerignore  .gitignore  .pre-commit-config.yaml  Banana.code-workspace  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  fly.toml  turbo.json  vercel.json
cli/banana/: README.md  package.json  pyproject.toml
cli/banana/banana_cli/: __init__.py  main.py
cli/banana/schema/: k3h4-dialogue-export-output.v1.json  k3h4-dialogue-run-input.v1.json  k3h4-dialogue-run-output.v1.json  k3h4-export-output.v1.json  k3h4-run-output.v1.json
cli/banana/scripts/: run-dialogue-taxonomy-smoke.sh
modules/k3h4/native/: CMakeLists.txt
modules/k3h4/native/tests/: CMakeLists.txt
modules/native_ai_core/native/: CMakeLists.txt
modules/native_math_foundation/native/: CMakeLists.txt
modules/native_netcode_runtime/native/: CMakeLists.txt
modules/native_physics_core/native/: CMakeLists.txt
modules/native_render_runtime/native/: CMakeLists.txt
modules/native_runtime_kernel/native/: CMakeLists.txt
modules/native_ui_runtime/native/: CMakeLists.txt
modules/native_world_core/native/: CMakeLists.txt
src/native/: CMakeLists.txt  CONTEXT.md  README.md
src/native/core/: banana.c  banana.h  banana_anticheat.c  banana_anticheat.h  banana_batch.c  banana_bms.c  banana_bms.h  banana_bms_batch_registry.c  banana_bms_ripeness.c  banana_calc.c  banana_classify.c  banana_core.h  banana_ripeness.c  banana_status.c  banana_status.h  banana_truck.c  main.c  main.h
src/native/core/dal/: banana_dal.c  banana_dal.h  banana_db.c  banana_db.h
src/native/core/domain/: banana_agent_pulse_model.c  banana_agent_pulse_model.h  banana_agent_pulse_model_cli.c  banana_agriculture.c  banana_agriculture.h  banana_application.c  (+35 more)
src/native/dal/: banana_db.c
src/native/docs/: native-module-boundary-review-2026-06-27.md  native-module-dag.manifest  native-module-split-epic.md
src/native/engine/: CHUNK_STREAMING_PROTOCOL.md  CMakeLists.txt  CONTEXT.md  README.md  RESOURCE_COLLECTION_INTEGRATION_GUIDE.md  engine.c  engine.h  engine_serialize.c  engine_serialize.h  wasm_main.c
src/native/include/: banana_launch_gate_policy.h  banana_native_ui_abi.h  banana_native_v3.h
src/native/k3h4/: README.md  k3h4_hypersphere_orchestration_layer.c  k3h4_hypersphere_orchestration_layer.h  k3h4_metrics_orchestration_layer.c  k3h4_metrics_orchestration_layer.h  k3h4_native_orchestrator.c  k3h4_native_orchestrator.h
src/native/legacy/: legacy_banana.c  legacy_banana.h  legacy_db.c  legacy_db.h  legacy_points.c  legacy_points.h
src/native/scaffold/: native_entry.c
src/native/testing/: native_test_hooks.h  native_test_hooks_default.c
src/native/wrapper/: banana_wrapper.c  banana_wrapper.h  banana_wrapper_internal.h  cinterop_wrapper.c  cinterop_wrapper.h
tests/native/: CMakeLists.txt  README.md  actor_mesh_registry_test.c  banana_agent_pulse_model_tests.c  banana_core_tests.c  banana_wrapper_tests.c  chunk_stream_packet_test.c  cinterop_wrapper_tests.c  collider_broad_phase_test.c  controller_system_dispatch_test.c  dx12_projection_policy_test.c  dx12_scene_flow_test.c  dx12_scene_overlay_frame_test.c  engine_dx12_runtime_smoke_test.c  engine_input_contract_transition_test.c  engine_typed_abi_validation_test.c  input_binding_test.c  interactive_collection_test.c  interactive_object_spawner_test.c  interactive_objects_test.c  native_test_hooks_default_tests.c  native_test_hooks_env.c  native_wrapper_tests.c  npc_merchant_test.c  player_builds_test.c  player_resources_test.c  player_sync_staleness_test.c  render_headless_frame_test.c  render_mesh_terrain_test.c  runtime_application_service_ports_test.c  runtime_architecture_dependency_guard_test.c  runtime_architecture_guard_rules.h  runtime_camera_follow_policy_test.c  runtime_compile_guard_abi_test.c  runtime_controller_attach_test.c  runtime_controller_kind_domain_test.c  runtime_controller_sync_map_test.c  runtime_controller_sync_strict_test.c  runtime_controller_world_metrics_test.c  runtime_domain_adapters_test.c  (+49 more)
tests/native/ai/: combat_controller_signal_test.c  wildlife_controller_war_state_test.c
tests/native/architecture/: runtime_architecture_guard_rules.h
tests/native/engine/: CMakeLists.txt  engine_click_to_move_target_test.c  engine_merchant_trade_test.c  engine_serialize_test.c  engine_typed_abi_validation_test.c  test_engine_ai_controller_suite.c  test_engine_ai_fsm_suite.c  test_engine_ai_navigation_suite.c  test_engine_asset_compiler_integration.c  test_engine_asset_generation.c  test_engine_domain_contracts.c  test_engine_domain_suite_framework.h  test_engine_interaction_suite.c  test_engine_phase1.c  test_engine_physics_suite.c  test_engine_render_suite.c  test_engine_runtime_contracts.c  test_engine_world_suite.c
tests/native/feedback/: native_feedback_loop_factory.c  validate_demo_frame_bundle.sh
tests/native/input/: input_binding_test.c
tests/native/k3h4/: k3h4_metrics_orchestration_layer_test.c
tests/native/physics/: physics_raycast_test.c
tests/native/player/: player_builds_test.c  player_sync_staleness_test.c
tests/native/runtime/: combat_controller_coverage_test.c  combat_controller_k3h4_test.c
tests/native/terrain/: terrain_chunk_seam_continuity_test.c  terrain_chunks_identity_partition_test.c  terrain_features_test.c
tests/native/ui/: native_ui_abi_test.c
tests/native/win32_dx12_poc/: continent_asset_registry_test.c  scene_flow_test.c  scene_overlay_test.c
tests/native/world/: signals_test.c  world_query_nearby_test.c
(+6006 files in other folders)
